# turtle_description

./: CMakeLists.txt  package.xml
config/: gz_bridge.yaml
launch/: display.launch.py  gazebo.launch.py  robot.launch.py  robot_copy.launch.py  rsp.launch.py
rviz/: config.rviz
src/: diff_drive_kinematic.cpp
urdf/: material_color.xacro  robot.gazebo  robot.urdf  robot_copy.urdf  turtle.sdf  turtle.urdf.xacro  turtle_macros.xacro
worlds/: obstacles.world
