<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_description</name>
  <version>1.0.0</version>
  <description>Contains robots URDF/Xacro filesd.</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>xacro</depend> 
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros</depend> 
  <depend>joint_state_publisher</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>